Refactor theme files: Rename theme path in package.json and replace old theme file with new github-dark-tritanopia-color-theme.json.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
       {
         "label": "Github Dark Tritanopia",
         "uiTheme": "vs-dark",
-        "path": "./themes/Github Dark Tritanopia-color-theme.json"
+        "path": "./themes/github-dark-tritanopia-color-theme.json"
       }
     ]
   }
