--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "github-dark-tritanopia",
   "displayName": "Github Dark Tritanopia",
   "description": "GitHub Dark Tritanopia color theme for VS Code - A colorblind-friendly dark theme based on GitHub's design system",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "publisher": "zanaty",
   "engines": {
-    "vscode": "^1.60.0"
+    "vscode": "^1.60.0",
+    "cursor": "^1.60.0"
   },
   "repository": {
     "type": "git",
