--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "GitHub Dark Tritanopia color theme for VS Code - A colorblind-friendly dark theme based on GitHub's design system",
   "version": "0.0.3",
   "publisher": "zanaty",
+  "icon": "icon.png",
+  "galleryBanner": {
+    "color": "#0d1117",
+    "theme": "dark"
+  },
   "engines": {
     "vscode": "^1.60.0",
     "cursor": "^1.60.0"
@@ -11,6 +16,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/moelzanaty3/github-dark-tritanopia"
+  },
+  "bugs": {
+    "url": "https://github.com/moelzanaty3/github-dark-tritanopia/issues"
   },
   "scripts": {
     "build": "vsce package",
